# scew

./: .cvsignore  .gitignore  .hgignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  INSTALL.WIN32  Makefile.am  NEWS  README  README.md  THANKS  autogen.sh  configure.ac  configure.in
doc/: .cvsignore  Doxyfile.in  Makefile.am
etc/: Makefile.am  scew.doxygen
etc/autoconf/: Makefile.am  doxygen.m4
etc/pkg-config/: .cvsignore  Makefile.am
examples/: Makefile.am  README
examples/scew_print/: .cvsignore  Makefile.am  scew_print.c
examples/scew_stream/: .cvsignore  Makefile.am  scew_stream.c
examples/scew_write/: .cvsignore  Makefile.am  scew_write.c
examples/win32/: Makefile.am
examples/win32/scew_print/: Makefile.am
examples/win32/scew_stream/: Makefile.am
examples/win32/scew_write/: Makefile.am
scew/: .cvsignore  Makefile.am  attribute.c  attribute.h  bool.h  element.c  element.h  element_attribute.c  element_compare.c  element_copy.c  element_search.c  error.c  error.h  export.h  list.c  list.h  parser.c  parser.h  printer.c  printer.h  reader.c  reader.h  reader_buffer.c  reader_buffer.h  reader_file.c  reader_file.h  scew.h  str.c  str.h  tree.c  tree.h  types.h  writer.c  writer.h  writer_buffer.c  writer_buffer.h  writer_file.c  writer_file.h  xattribute.c  xattribute.h  (+11 more)
src/: Makefile.am  attribute.c  attribute.h  element.c  element.h  error.c  error.h  handler.c  handler.h  mem.c  mem.h  parser.c  parser.h  scew.h  str.c  str.h  tree.c  tree.h  types.h  util.c  util.h  writer.c  writer.h  xattribute.c  xattribute.h  xelement.c  xelement.h  xerror.c  xerror.h  xhandler.c  xhandler.h  xparser.c  xparser.h  xprint.c  xprint.h  xtree.h
tests/: .cvsignore  Makefile.am  check_attribute.c  check_element.c  check_list.c  check_parser.c  check_printer.c  check_reader_buffer.c  check_reader_file.c  check_tree.c  check_writer_buffer.c  check_writer_file.c  main.c  test.h
tests/data/: Makefile.am  check_reader_file.txt  check_reader_file_utf16.txt
win32/: INSTALL.txt  Makefile.am  README  README.txt  scew.dsp  scew.sln  scew.vcproj
