#
# $Id$
#
# Author: Aleix Conchillo Flaque <aleix@member.fsf.org>
# Date:   Sat Nov 23, 2002 13:52
#
# Copyright (C) 2002, 2003, 2004 Aleix Conchillo Flaque
#

INCLUDES = -I$(top_srcdir)/scew

noinst_PROGRAMS = scew_print

scew_print_SOURCES = scew_print.c
scew_print_LDADD = $(top_builddir)/scew/libscew.a
